--- a/MedicalClinic/src/View/PatientsView.form
+++ b/MedicalClinic/src/View/PatientsView.form
@@ -153,7 +153,7 @@
         <Component class="javax.swing.JFormattedTextField" name="BirthFormattedField">
           <Properties>
             <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-              <Format subtype="0" type="1"/>
+              <Format format="dd/MM/yyyy" subtype="-1" type="1"/>
             </Property>
           </Properties>
         </Component>
