--- a/MedicalClinic/src/View/PatientsView.form
+++ b/MedicalClinic/src/View/PatientsView.form
@@ -48,10 +48,10 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="EditorPanel" min="-2" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
+              <Component id="EditorPanel" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -71,8 +71,6 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
-                          <Component id="SearchButton" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="NewButton" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="EditButton" min="-2" max="-2" attributes="0"/>
@@ -98,7 +96,9 @@
                               <Component id="ContactTextField" alignment="1" max="32767" attributes="0"/>
                               <Component id="BirthFormattedField" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Component id="IdTextField" min="-2" pref="108" max="-2" attributes="0"/>
+                                  <Component id="IdTextField" min="-2" pref="41" max="-2" attributes="0"/>
+                                  <EmptySpace max="-2" attributes="0"/>
+                                  <Component id="RetrieveButton" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
                               <Component id="AgreementComboBox" max="32767" attributes="0"/>
@@ -111,13 +111,14 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="0" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="IdTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="IdLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="RetrieveButton" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace pref="11" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="NameTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="NameLabel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -147,12 +148,11 @@
                       <Component id="AgreementComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="AgreementLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="79" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="108" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="SearchButton" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="NewButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="EditButton" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="RemoveButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="NewButton" alignment="0" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
@@ -226,14 +226,9 @@
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="SearchButton">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Consultar"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JButton" name="NewButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Novo"/>
+            <Property name="text" type="java.lang.String" value="Cadastrar"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="EditButton">
@@ -244,6 +239,11 @@
         <Component class="javax.swing.JButton" name="RemoveButton">
           <Properties>
             <Property name="text" type="java.lang.String" value="Remover"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="RetrieveButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Consultar"/>
           </Properties>
         </Component>
       </SubComponents>
