Iniciado crud de consultas

--- a/MedicalClinic/src/View/PatientsView.form
+++ b/MedicalClinic/src/View/PatientsView.form
@@ -27,8 +27,12 @@
     </Component>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
+  <AccessibilityProperties>
+    <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Cadastro de Pacientes"/>
+    <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value="Cadastro de Pacientes"/>
+  </AccessibilityProperties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
